       to Bruno Haible)

changes in sbcl-0.8.11 relative to sbcl-0.8.10:
  * new feature: the SB-EXT:MUFFLE-CONDITIONS declaration should be
    used to control emission of compiler diagnostics, rather than the
    SB-EXT:INHIBIT-WARNINGS OPTIMIZE quality.  See the manual for
    documentation on this feature.  The SB-EXT:INHIBIT-WARNINGS
    quality should be considered deprecated.
  * fixed bug: CLOSE :ABORT T on appending stream no longer causes
    file deletion.
  * fixed bug: Invalid slot specification errors now print correctly. 
    (thanks to Zach Beane)
  * fixed bug 320: Shared to local slot value transfers in class 
    redefinitions now happen corrently from superclasses as
    well. (reported by Bruno Haible)
  * fixed bug 316: SHIFTF now accepts VALUES forms. (reported by Bruno
    Haible)
  * fixed bug 322: DEFSTRUCT :TYPE LIST type predicates now handle
    improper lists correctly. (reported by Bruno Haible)
  * fixed bug 313: source-transform for <fun-name> was erroneously
    applied to a call of a value of a variable with name <fun-name>.
    (reported by Antonio Menezes Leitao)
  * fixed bug 307: The obsolete instance protocol ensures that
    subclasses are properly obsoleted.  (thanks to Nikodemus Siivola)
  * on SPARC, X86 and Alpha fixed bug 298, revealed by Paul F. Dietz'
    test suite: SBCL can remove dead unknown-values globs from the
    middle of the stack.
  * added a new restart to *BREAK-ON-SIGNALS* handling to make it
    easier to resume long computations after using *BREAK-ON-SIGNALS*
    to diagnose and fix failures.  (thanks to Nikodemus Siivola)
  * fixed bug reported by PFD in lisppaste #747 (and Bruno Haible from
    CLISP test suite): WRITE-TO-STRING is not constant-foldable.
  * fixed bugs in COMPLEX type specifier: UPGRADED-COMPLEX-PART-TYPE
    is now consistent with (COMPLEX <x>); bugs in treatment of COMPLEX
    MEMBER and UNION types have likewise been fixed.  (thanks to Bruno
    Haible)